--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -9,10 +9,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Setup MSBuild.exe path
         run: |
@@ -26,7 +26,7 @@ jobs:
         run: |
           msbuild /p:Configuration=Release /p:TargetFrameworkVersion=v3.5
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: COM3D2.ShapeAnimator.Plugin
           path: /home/runner/work/COM3D2.ShapeAnimator.Plugin/COM3D2.ShapeAnimator.Plugin/bin/Release/COM3D2.ShapeAnimator.Plugin.dll
