--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           nuget-api-key: ${{ secrets.NuGetAPIKey }}
           nuget-version: '5.x'
-      - run: nuget restore COM3D2.KissYourMaid.Plugin.sln
+      - run: nuget restore COM3D2.ShapeAnimator.Plugin.sln
         
       - name: Build
         run: |
